imagemin-webp should be removed due to an alarm bell, but set in configuration

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -11,5 +11,12 @@
   &__container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(em(160), 1fr));
+    gap: em(10);
+  }
+  &__item {
+    img {
+      height: 100%;
+      object-fit: fill;
+    }
   }
 }
